# sbTradutor

./: .gitignore  CMakeLists.txt  README.md  README.txt  bin.asm  build_debug.sh  build_release.sh  lista erros SB  lol  lol.mcr  lol.pre  main.cpp  main.sublime-workspace  noob.asm  teste.asm  triangulo.asm
include/: defines.hpp  fileLoader.hpp  lexical.hpp  macro.hpp  montador.hpp  parser.hpp  preprocessing.hpp  symbol.hpp  token.hpp  verboseLog.hpp
src/: defines.cpp  fileLoader.cpp  lexical.cpp  macro.cpp  montador.cpp  parser.cpp  preprocessing.cpp  symbol.cpp  token.cpp  verboseLog.cpp
test/: bin.asm
